--- a/src/App.global.css
+++ b/src/App.global.css
@@ -1,18 +1,22 @@
+@import '~antd/dist/antd.css';
 /*
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
 body {
   position: relative;
-  color: white;
+  /* color: white; */
+  background: white;
+  padding: 10px 0;
   /* height: 100vh; */
-  padding: 40px;
+  /* padding: 40px; */
   /* background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
     #dd5789 51.77%,
     #7a2c9e 129.35%
   ); */
+  margin: 0;
   font-family: sans-serif;
   overflow-y: hidden;
   display: flex;
